--- a/index2.html
+++ b/index2.html
@@ -19,6 +19,7 @@
             padding: 15px;
             /* border-radius: 10px; */
             background-color: rgba(131, 131, 131, 0.35);
+            background-color: #f8f9fa !important;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             box-shadow: rgba(0, 0, 0, 0.35) 0rem 0.31rem 0.5rem;
         }
@@ -38,9 +39,11 @@
 
         .btn-calc {
             width: 60px;
-            height: 50px;
+            height: 40px;
             font-size: 1.1rem;
             margin: 3px;
+            background-color: white;
+            border-radius: 0 !important;
         }
 
         .btn-calc sup {
@@ -76,13 +79,13 @@
         }
 
         .btn-trig-func {
-            font-size: 0.9rem;
+            font-size: .75rem;
             display: flex;
             align-items: center;
             gap: 5px;
             font-weight: 500;
             border-radius: 5px;
-            padding: 6px 10px;
+            padding: 6px 0px;
         }
 
         .calDiv__trigonoImg--size {
